[gd_scene load_steps=27 format=2]

[ext_resource path="res://Shop.gd" type="Script" id=1]
[ext_resource path="res://Images/level/sky.png" type="Texture" id=2]
[ext_resource path="res://Images/card/diamond-01.png" type="Texture" id=3]
[ext_resource path="res://Images/card/diamond-02.png" type="Texture" id=4]
[ext_resource path="res://SlidingTitle.tscn" type="PackedScene" id=5]
[ext_resource path="res://Images/button/back.png" type="Texture" id=6]
[ext_resource path="res://Images/button/back-pressed.png" type="Texture" id=7]
[ext_resource path="res://Images/button/box.png" type="Texture" id=8]
[ext_resource path="res://Store.gd" type="Script" id=9]
[ext_resource path="res://Images/button/button-01.png" type="Texture" id=10]
[ext_resource path="res://Images/button/chest-unlock.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFontData" id=2]
font_path = "res://Fonts/rattytatty/Ratty Tatty/RattyTatty.ttf"

[sub_resource type="DynamicFont" id=3]
size = 150
font_data = SubResource( 2 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFontData" id=8]
font_path = "res://Fonts/rattytatty/Ratty Tatty/RattyTatty.ttf"

[sub_resource type="DynamicFont" id=9]
size = 80
font_data = SubResource( 8 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Fonts/rattytatty/Ratty Tatty/RattyTatty.ttf"

[sub_resource type="DynamicFont" id=6]
size = 60
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=10]
font_path = "res://Fonts/NotoSans-Black.ttf"

[sub_resource type="DynamicFont" id=11]
size = 30
font_data = SubResource( 10 )

[sub_resource type="DynamicFontData" id=12]
font_path = "res://Fonts/NotoSans-Black.ttf"

[sub_resource type="DynamicFont" id=13]
size = 30
font_data = SubResource( 12 )

[sub_resource type="DynamicFontData" id=14]
font_path = "res://Fonts/NotoSans-Black.ttf"

[sub_resource type="DynamicFont" id=15]
size = 30
font_data = SubResource( 14 )

[node name="Shop" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 360, 540 )
texture = ExtResource( 2 )

[node name="MyMoney" type="Node2D" parent="."]
position = Vector2( 372.742, 318.686 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="MyMoney"]
position = Vector2( 19.0452, -13.7208 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
frame = 1
playing = true

[node name="Label" type="Label" parent="MyMoney"]
margin_left = -120.0
margin_top = -81.0
margin_right = -61.0
margin_bottom = 60.0
grow_horizontal = 0
grow_vertical = 2
custom_fonts/font = SubResource( 3 )
text = "0"

[node name="SlidingTitle" parent="." instance=ExtResource( 5 )]
position = Vector2( 360, 78.5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="Back" type="TouchScreenButton" parent="."]
position = Vector2( 600.406, 19.0624 )
normal = ExtResource( 6 )
pressed = ExtResource( 7 )

[node name="Buy" type="TouchScreenButton" parent="."]
position = Vector2( 504.624, 179.719 )
scale = Vector2( 2, 2 )
normal = ExtResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Buy"]
position = Vector2( 63.6182, 49.9857 )
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 7 )
frame = 1
playing = true

[node name="Label" type="Label" parent="Buy"]
margin_left = 7.95227
margin_top = 15.9045
margin_right = 47.9523
margin_bottom = 91.9045
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "+"

[node name="Store" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="ColorRect" type="ColorRect" parent="Store"]
margin_right = 720.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 0.670588 )

[node name="SomeDIamondsButton" type="TouchScreenButton" parent="Store"]
position = Vector2( 90, 90 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 10 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Store/SomeDIamondsButton"]
position = Vector2( 107.937, 71.1148 )
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 4 )
frame = 1
playing = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="Store/SomeDIamondsButton"]
position = Vector2( 143.338, 84.6171 )
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 4 )
frame = 1
playing = true

[node name="AnimatedSprite3" type="AnimatedSprite" parent="Store/SomeDIamondsButton"]
position = Vector2( 67.8733, 85.5437 )
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 4 )
frame = 1
playing = true

[node name="Label" type="Label" parent="Store/SomeDIamondsButton"]
margin_left = 57.1457
margin_top = 99.3512
margin_right = 141.146
margin_bottom = 156.351
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "+ 21"

[node name="PriceLabel" type="Label" parent="Store/SomeDIamondsButton"]
modulate = Color( 0.333333, 0.333333, 0.333333, 1 )
margin_left = 210.0
margin_top = 60.0
margin_right = 290.0
margin_bottom = 102.0
custom_fonts/font = SubResource( 11 )
text = "0.99$"

[node name="ManyDiamondsButton" type="TouchScreenButton" parent="Store"]
position = Vector2( 90, 346 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 10 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Store/ManyDiamondsButton"]
position = Vector2( 73.2632, 51.6566 )
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 4 )
frame = 1
playing = true

[node name="AnimatedSprite4" type="AnimatedSprite" parent="Store/ManyDiamondsButton"]
position = Vector2( 60.3518, 76.5891 )
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 4 )
frame = 1
playing = true

[node name="AnimatedSprite6" type="AnimatedSprite" parent="Store/ManyDiamondsButton"]
position = Vector2( 149.722, 49.2572 )
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 4 )
frame = 1
playing = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="Store/ManyDiamondsButton"]
position = Vector2( 164.382, 73.9689 )
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 4 )
frame = 1
playing = true

[node name="AnimatedSprite3" type="AnimatedSprite" parent="Store/ManyDiamondsButton"]
position = Vector2( 111.719, 69.8655 )
scale = Vector2( 0.35, 0.35 )
frames = SubResource( 4 )
frame = 1
playing = true

[node name="Label" type="Label" parent="Store/ManyDiamondsButton"]
margin_left = 58.1658
margin_top = 103.076
margin_right = 147.166
margin_bottom = 160.076
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "+ 47"

[node name="PriceLabel" type="Label" parent="Store/ManyDiamondsButton"]
modulate = Color( 0.333333, 0.333333, 0.333333, 1 )
margin_left = 210.0
margin_top = 60.0
margin_right = 246.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 13 )
text = "1.99$"

[node name="FullUnlockButton" type="TouchScreenButton" parent="Store"]
position = Vector2( 90, 606 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 10 )

[node name="Sprite" type="Sprite" parent="Store/FullUnlockButton"]
position = Vector2( 105.021, 72.2007 )
texture = ExtResource( 11 )

[node name="Label" type="Label" parent="Store/FullUnlockButton"]
margin_left = 37.0
margin_top = 80.3826
margin_right = 316.0
margin_bottom = 180.383
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_constants/line_spacing = -14
text = "Full Unlock"
align = 1
valign = 1

[node name="PriceLabel" type="Label" parent="Store/FullUnlockButton"]
modulate = Color( 0.333333, 0.333333, 0.333333, 1 )
margin_left = 210.0
margin_top = 60.0
margin_right = 290.0
margin_bottom = 102.0
custom_fonts/font = SubResource( 15 )
text = "3.99$"

[node name="StoreBack" type="TouchScreenButton" parent="Store"]
position = Vector2( 567.677, 857.825 )
normal = ExtResource( 6 )
pressed = ExtResource( 7 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="released" from="Back" to="." method="_on_Back_released"]
[connection signal="released" from="Buy" to="." method="_on_Buy_released"]
[connection signal="pressed" from="Store/SomeDIamondsButton" to="." method="_on_SomeDIamondsButton_pressed"]
[connection signal="pressed" from="Store/ManyDiamondsButton" to="." method="_on_ManyDiamondsButton_pressed"]
[connection signal="pressed" from="Store/FullUnlockButton" to="." method="_on_FullUnlockButton_pressed"]
[connection signal="released" from="Store/StoreBack" to="." method="_on_StoreBack_released"]
